--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
-    "vue-lang-code-flags": "^1.0.13",
-    "vue-star-rating": "^1.7.0"
+    "vue-awesome": "^4.5.0",
+    "vue-lang-code-flags": "^1.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
